Fixed products stretching when minimizing screen

--- a/assignment_03/src/components/FeaturedProducts.css
+++ b/assignment_03/src/components/FeaturedProducts.css
@@ -1,12 +1,12 @@
 #grid-container {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 5px;
     width: 100%;
     height: auto;
-    padding: 50px;
+    padding: 5px;
     font-family: 'Open Sans', sans-serif;
-    
+    margin-bottom: 10vw;
 }
 
 h2 {
